--- a/Desaf(001)/style-1.css
+++ b/Desaf(001)/style-1.css
@@ -40,19 +40,19 @@ header > p {
 } 
 
 article > p {
-    margin: 100px 20px;
-    line-height: 11vh;
-    font-size: 5vh;
-    padding: 15px;
+    margin: 20px 20px;
+    line-height: 5vh;
+    font-size: 0.9em;
     font-family: 'Sriracha';
 }
 
 #texto { 
     max-width: 500px;
-    color: white;
+    color: rgb(255, 255, 255);
     background: rgba(0, 0, 0, 0.589);
-    width: 85%;
-    height: 110vh;
+    width: 80%;
+    height: 42vh;
+    margin: 0px 10px;
     position: absolute;
     bottom: 60%;
     transform: translateY(60%);
@@ -61,7 +61,7 @@ article > p {
 #img2 {
     background: url('InforExtra/imagens/background002.jpg') fixed;
     position: relative;
-    height: 900px;
+    height: 420px;
     background-size: cover;
     box-shadow: inset 0px 0px 13px 0px black;
 }
@@ -69,53 +69,16 @@ article > p {
 #img {
     position: relative;
     background: url('InforExtra/imagens/background001.jpg') no-repeat center center fixed;
-    height: 900px;
+    height: 420px;
     background-size: cover;
     box-shadow: inset 0px 0px 13px 0px black;
 }
 
 footer {
-    font: 1.1em 'verdana';
+    font: 0.7em 'verdana'; 
     text-align: center;
     color: white;
-    background: black;
+    background: #000000;
     padding: 5px;
     
-}
-
-@media (max-width: 1000px) {
-    article > p {
-        margin: 20px 20px;
-        line-height: 5vh;
-        font-size: 0.8em;
-        font-family: 'Sriracha';
-    }
-    #texto { 
-        
-        max-width: 500px;
-        color: rgb(255, 255, 255);
-        background: rgba(0, 0, 0, 0.589);
-        width: 85%;
-        height: 47vh;
-        position: absolute;
-        bottom: 60%;
-        transform: translateY(60%);
-    }
-    #img2 {
-        background: url('InforExtra/imagens/background002.jpg') fixed;
-        position: relative;
-        height: 370px;
-        background-size: cover;
-        box-shadow: inset 0px 0px 13px 0px black;
-    }
-    #img {
-        position: relative;
-        background: url('InforExtra/imagens/background001.jpg') no-repeat center center fixed;
-        height: 370px;
-        background-size: cover;
-        box-shadow: inset 0px 0px 13px 0px black;
-    }
-    footer {
-        font-size: 0.7em;
-    }
 }
