--- a/Desaf(001)/style-1.css
+++ b/Desaf(001)/style-1.css
@@ -82,3 +82,12 @@ footer {
     padding: 5px;
     
 }
+
+@media (orientation: landscape) {
+    article > p {
+        margin: 20px 20px;
+        line-height: 6vh;
+        font-size: 1em;
+        font-family: 'Sriracha';
+    }
+}
