--- a/Desaf(001)/style.css
+++ b/Desaf(001)/style.css
@@ -26,7 +26,7 @@ header > p, a {
     text-decoration: none;
 }
 
-a:hover {
+#só:hover {
     color: darkgray;
     text-decoration: underline;
 }
@@ -43,7 +43,7 @@ article > p {
     margin: 100px 20px;
     line-height: 11vh;
     font-size: 5vh;
-    padding: 15px;
+    padding: 10px;
     font-family: 'Sriracha';
 }
 
@@ -51,7 +51,7 @@ article > p {
     max-width: 500px;
     color: white;
     background: rgba(0, 0, 0, 0.589);
-    width: 85%;
+    width: 95%;
     height: 110vh;
     position: absolute;
     bottom: 60%;
@@ -80,7 +80,63 @@ footer {
     color: white;
     background: black;
     padding: 5px;
-    
+}
+
+#menu1 > h2 {
+    font-family: 'Passion One';
+    padding: 10px;
+    font-size: 3.0em;
+}
+
+#volta {
+    position: absolute;
+    height: 10%;
+    top: 6px;
+    right: 10px;
+}
+
+#menu1 > .op:hover {
+    background-color: rgb(117, 117, 117);
+    transition-duration: 0.2s;
+}
+
+#menu1 > a {
+    color: black;
+    font-family: 'Passion One';
+    padding: 15px;
+    font-size: 2.0em;
+    background-color: white;
+    display: block;
+}
+
+#menu1 > p {
+    color: black;
+    font-family: 'Passion One';
+    padding: 20px;
+    font-size: 2.0em;
+}
+
+#menu1 {
+    border-radius: 5px;
+    z-index: 1;
+    box-shadow: 0px 0px 15px black;
+    margin: 10px;
+    position: fixed;
+    background: rgb(207, 207, 207);
+    height: 600px;
+    width: 350px;
+}
+
+main {
+    position: relative;
+}
+
+#menu, nav {
+    height: 50px;
+    position: absolute;
+    bottom: 99.5%;
+    right: 5%;
+    transform: translateX(30%);
 }
 
 @media (max-width: 300px) {
@@ -117,5 +173,11 @@ footer {
     }
     footer {
         font-size: 0.7em;
+    }
+}
+
+@media (min-width: 1200px) {
+    #menu {
+        transform: translateX(70%);
     }
 }
