--- a/Desaf(001)/style-1.css
+++ b/Desaf(001)/style-1.css
@@ -16,7 +16,7 @@ header {
 }
 
 h1 {
-    font-size: 14vh;
+    font-size: 5vh;
     font-family: 'Passion One';
     padding-top: 20px;
 }
@@ -33,7 +33,7 @@ a:hover {
 
 header > p {
     color: white;
-    line-height: 11vh;
+    line-height: 5vh;
     font-size: 3vh;
     padding: 15px;
     font-family: 'Sriracha';
@@ -83,11 +83,75 @@ footer {
     
 }
 
+#menu1 > h2 {
+    font-family: 'Passion One';
+    padding: 10px;
+    font-size: 3.0em;
+}
+
+#volta {
+    position: absolute;
+    height: 55px;
+    top: 10px;
+    right: 10px;
+}
+
+#menu1 > .op:hover {
+    text-decoration: none;
+    background-color: rgb(117, 117, 117);
+    transition-duration: 0.2s;
+}
+
+#menu1 > .op {
+    color: black;
+    font-family: 'Passion One';
+    padding: 15px;
+    font-size: 2.0em;
+    background-color: white;
+    display: block;
+}
+
+#menu1 > p {
+    color: black;
+    font-family: 'Passion One';
+    padding: 20px;
+    font-size: 2.0em;
+}
+
+#menu1 {
+    border-radius: 5px;
+    z-index: 1;
+    box-shadow: 0px 0px 15px black;
+    margin: 10px;
+    position: fixed;
+    background: rgb(207, 207, 207);
+    height: 96%;
+    width: 85%;
+}
+
+main {
+    position: relative;
+}
+
+#menu, nav {
+    height: 30px;
+    position: absolute;
+    bottom: 97.5%;
+    right: 5.5%;
+    transform: translateX(30%);
+}
+
 @media (orientation: landscape) {
     article > p {
         margin: 20px 20px;
         line-height: 6vh;
         font-size: 1em;
         font-family: 'Sriracha';
+    }
+}
+
+@media (min-width: 1200px) {
+    #menu {
+        transform: translateX(70%);
     }
 }
