--- a/Desaf(001)/style.css
+++ b/Desaf(001)/style.css
@@ -90,8 +90,8 @@ footer {
 
 #volta {
     position: absolute;
-    height: 10%;
-    top: 6px;
+    height: 55px;
+    top: 10px;
     right: 10px;
 }
 
@@ -100,7 +100,7 @@ footer {
     transition-duration: 0.2s;
 }
 
-#menu1 > a {
+#menu1 > .op {
     color: black;
     font-family: 'Passion One';
     padding: 15px;
@@ -123,7 +123,7 @@ footer {
     margin: 10px;
     position: fixed;
     background: rgb(207, 207, 207);
-    height: 600px;
+    height: 96%;
     width: 350px;
 }
 
